Issue #11826: Fix memory leak in atexitmodule.